fixed style.css to align with learn

--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 html {
-    background: #aaaaff;
+    background: #000;
+    color:      #fff;
 }
 
 .page {
     width: 600px;
     margin: auto;
-    font-family: Helvetica;
+    font-family: Verdana, sans-serif;
 }
 h1 { 
-    white-space: nowrap; 
+    margin: 10px;
     text-align: center;
-    font-family: Helvetica;
+    font-family: Verdana, sans-serif;
 }
 
 p, pre, .embed {
@@ -18,20 +19,33 @@ p, pre, .embed {
 }
 
 .embed {
-    border: 1px solid #555555;
+    border: 1px solid #666;
     border-radius: 5px;
     padding: 5px;
+    background: #111;
+}
+
+
+@keyframes link-normal {
+    from { text-shadow: none; }
+    to   { text-shadow:
+        0 0 10px #fff,
+        0 0 10px #fff,
+        0 0 10px #fff;
+    }
 }
 
 a {
     text-decoration: none;
-    text-shadow: rgba(0,0,255,1) 0px 0px 10px;
+    animation: link-normal 2s forwards;
 }
 a:link, a:visited {
-    color: black;
+    color: #fff;
 }
 a:hover {
-  color: magenta;
+    animation: link-normal 0.3s forwards;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
 
